{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 40,
  "lineage": "09c50104-7ca9-a3e3-77db-0bc4bd2296a9",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:441711222809:loadbalancer/app/reptionary-stg-alb/6a3126fed85e0cf6",
            "arn_suffix": "app/reptionary-stg-alb/6a3126fed85e0cf6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "reptionary-stg-alb-1378619902.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:441711222809:loadbalancer/app/reptionary-stg-alb/6a3126fed85e0cf6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "reptionary-stg-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07758cd415a3b77ad"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01b93ce20eee42133"
              },
              {
                "subnet_id": "subnet-051d19691fa501eb1"
              }
            ],
            "subnets": [
              "subnet-01b93ce20eee42133",
              "subnet-051d19691fa501eb1"
            ],
            "tags": {
              "Environment": "stg",
              "ManagedBy": "terraform",
              "Name": "reptionary-stg-alb",
              "Project": "reptionary"
            },
            "tags_all": {
              "Environment": "stg",
              "ManagedBy": "terraform",
              "Name": "reptionary-stg-alb",
              "Project": "reptionary"
            },
            "vpc_id": "vpc-01721a79495217e42",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:441711222809:listener/app/reptionary-stg-alb/6a3126fed85e0cf6/f2a64c5d36f9741a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:441711222809:targetgroup/reptionary-stg-tg/c0c247dca9cfc2a1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:441711222809:listener/app/reptionary-stg-alb/6a3126fed85e0cf6/f2a64c5d36f9741a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:441711222809:loadbalancer/app/reptionary-stg-alb/6a3126fed85e0cf6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_alb.alb",
            "module.alb.aws_lb_target_group.alb",
            "module.sg.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:441711222809:targetgroup/reptionary-stg-tg/c0c247dca9cfc2a1",
            "arn_suffix": "targetgroup/reptionary-stg-tg/c0c247dca9cfc2a1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health_checks",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:441711222809:targetgroup/reptionary-stg-tg/c0c247dca9cfc2a1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:441711222809:loadbalancer/app/reptionary-stg-alb/6a3126fed85e0cf6"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "reptionary-stg-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01721a79495217e42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:441711222809:security-group/sg-048ecb3831021817d",
            "description": "Security group for RDS in stg environment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048ecb3831021817d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow PostgreSQL from ECS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07758cd415a3b77ad"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "reptionary-stg-rds-sg",
            "name_prefix": "",
            "owner_id": "441711222809",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "stg",
              "ManagedBy": "terraform",
              "Name": "reptionary-stg-rds-sg",
              "Project": "reptionary"
            },
            "tags_all": {
              "Environment": "stg",
              "ManagedBy": "terraform",
              "Name": "reptionary-stg-rds-sg",
              "Project": "reptionary"
            },
            "timeouts": null,
            "vpc_id": "vpc-01721a79495217e42"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:441711222809:security-group/sg-07758cd415a3b77ad",
            "description": "Security group for reptionary stg environment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07758cd415a3b77ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "reptionary-stg-sg",
            "name_prefix": "",
            "owner_id": "441711222809",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "stg",
              "ManagedBy": "terraform",
              "Name": "reptionary-stg-sg",
              "Project": "reptionary"
            },
            "tags_all": {
              "Environment": "stg",
              "ManagedBy": "terraform",
              "Name": "reptionary-stg-sg",
              "Project": "reptionary"
            },
            "timeouts": null,
            "vpc_id": "vpc-01721a79495217e42"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:441711222809:subnet/subnet-0859453705322ad7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0859453705322ad7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "441711222809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stg",
              "Name": "reptionary-stg-private-1a"
            },
            "tags_all": {
              "Environment": "stg",
              "Name": "reptionary-stg-private-1a"
            },
            "vpc_id": "vpc-01721a79495217e42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:441711222809:subnet/subnet-05acee078db59c45b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05acee078db59c45b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "441711222809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stg",
              "Name": "reptionary-stg-private-1c"
            },
            "tags_all": {
              "Environment": "stg",
              "Name": "reptionary-stg-private-1c"
            },
            "vpc_id": "vpc-01721a79495217e42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:441711222809:subnet/subnet-051d19691fa501eb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051d19691fa501eb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "441711222809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stg",
              "Name": "reptionary-stg-public-1a"
            },
            "tags_all": {
              "Environment": "stg",
              "Name": "reptionary-stg-public-1a"
            },
            "vpc_id": "vpc-01721a79495217e42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:441711222809:subnet/subnet-01b93ce20eee42133",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b93ce20eee42133",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "441711222809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stg",
              "Name": "reptionary-stg-public-1c"
            },
            "tags_all": {
              "Environment": "stg",
              "Name": "reptionary-stg-public-1c"
            },
            "vpc_id": "vpc-01721a79495217e42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:441711222809:vpc/vpc-01721a79495217e42",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e7c7bd54e740d8e0",
            "default_route_table_id": "rtb-0312844af1df67f72",
            "default_security_group_id": "sg-05c8ab8da1baac31f",
            "dhcp_options_id": "dopt-07687760",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01721a79495217e42",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0312844af1df67f72",
            "owner_id": "441711222809",
            "tags": {
              "Environment": "stg",
              "Name": "reptionary-stg-vpc"
            },
            "tags_all": {
              "Environment": "stg",
              "Name": "reptionary-stg-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}